--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="assets/favicon-32x32.png">
     <link rel="stylesheet" href="styles.css">
     <title>QR Code Component</title>
 </head>
 <body>
-    
+    <main>
+        <div class="main-container">
+            <a href="https://www.frontendmentor.io/" target="_blank">
+                <img src="assets/image-qr-code.png" alt="QR code that links to the frontend mentor's website.">
+            </a>
+            <p>Improve your front-end skills by building projects</p>
+            <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level.</p>
+        </div>
+    </main>
 </body>
 </html>
