add: id attribute to div

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main>
-        <div class="main-container">
+        <div id="qr-frontendmentor-home">
             <a href="https://www.frontendmentor.io/" target="_blank">
                 <img src="assets/image-qr-code.png" alt="QR code that links to the frontend mentor's website.">
             </a>
