add: css styles, modify: split main div into two divs

--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,16 @@
 </head>
 <body>
     <main>
-        <div id="qr-frontendmentor-home">
-            <a href="https://www.frontendmentor.io/" target="_blank">
-                <img src="assets/image-qr-code.png" alt="QR code that links to the frontend mentor's website.">
-            </a>
-            <p>Improve your front-end skills by building projects</p>
-            <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level.</p>
+        <div class="qr-frontendmentor-home">
+            <div class="qr-code">
+                <a href="https://www.frontendmentor.io/" target="_blank">
+                    <img src="assets/image-qr-code.png" alt="QR code that links to the frontend mentor's website.">
+                </a>
+            </div>
+            <div class="text">
+                <p>Improve your front-end skills by building projects</p>
+                <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level.</p>
+            </div>
         </div>
     </main>
 </body>
